# cybersoul-dashboard-financeiro

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: dashboard.py  settings.py
data/db/: assets.json  dollar.db
data/sql/: finance.sql
src/agents/: dollar_agent.py  post_agent.py  stock_internet_agent.py
src/crew/: dollar_crew.py
src/entities/: caixa_db.py  dollar_db.py  stock_db.py
src/model/: caixa.py  currency.py
src/services/: asset_service.py  dollar_service.py  duckduckgo_service.py  portifolio_service.py  stock_service.py
src/tasks/: dollar_tasks.py  post_task.py  stock_internet_task.py
